crates/nirvash-macros/tests/fixtures/derive_action_vocabulary_invalid.rs
#[derive(nirvash_macros::ActionVocabulary)]
struct NotAnEnum;

fn main() {}
